<resources>
    <string name="app_name">Note_Saviours_Android</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="note_title_hint">Enter a title for the note.</string>
    <string name="note_text_hint">Enter text content for the note.</string>
    <string name="note_title_label">Title</string>
    <string name="note_text_label">Text</string>
    <string name="note_details_label">Details</string>
    <string name="note_complete_label">Complete?</string>
    <string name="notes_title">Notes</string>
    <string name="date_picker_title">Date of Note:</string>
    <string name="note_media">Media</string>
    <string name="note_location">Location</string>
    <string name="note_play">Play</string>
    <string name="note_stop">Stop</string>
    <string name="note_pause">Pause</string>
    <string name="note_record">Record</string>
    <string name="error_no_mic">No mic found</string>
    <string name="error_no_camera">No camera found</string>
    <string name="error_saving">Error while saving</string>
    <string name="new_note">New Note</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="category_sort">Sort by Category</string>
    <string name="datetime_sort">Sort by Date</string>
    <string name="subtitle">Remember Everything</string>
    <string name="delete_note">Delete</string>
    <string name="notes_deleted">Note(s) Deleted</string>
    <string name="capture">Capture</string>
    <string name="note_category_hint">Enter Category for the Note</string>
    <string name="title_activity_maps">Map</string>

</resources>