<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/note_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_category_hint" />

    <EditText
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_title_hint" />

    <EditText
        android:id="@+id/note_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/note_text_hint"
        android:inputType="textMultiLine" />

    <RelativeLayout
        android:id="@+id/rlLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_location" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/icons_location"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_media" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/note_imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"
            android:scaleType="centerInside" />

        <ImageButton
            android:id="@+id/note_imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <Button
            android:id="@+id/note_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/colorPrimaryDark"
            android:text="@string/note_record"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/note_play_pause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/note_play"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_details_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/note_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white" />

        <CheckBox
            android:id="@+id/note_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/note_complete_label" />
    </LinearLayout>

</LinearLayout>
